<resources>
    <string name="app_name">ZipRun</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="help_text_source_location">Pickup/Buy Location</string>
    <string name="help_text_destination">Delivery Location</string>

    <string name="destination">Enter Destination</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="check_location_settings_failed">"Unable to Fetch Current Location "</string>

    <string name="instruction_buy_something">Buy</string>
    <string name="instruction_pickup_something">Pick Up</string>
    <string name="instruction_fragment_title">Give Instructions To</string>
    <string name="confirm_fragment_title">Confirm</string>
    <string name="fetching_address">Fetching Address</string>
    <string name="title_delivery_location">Choose Delivery Location</string>
    <string name="txt_estimate_distance">Ride Estimate for %d Kms</string>
    <string name="currency">Rs</string>
    <string name="txt_transaction_cost">+ %d%% charge on items
        purchased</string>
    <string name="txt_buy_from">Buy From:</string>
    <string name="txt_pickup_from">Pickup From:</string>
    <string name="txt_deliver_to">Deliver To:</string>
    <string name="txt_review_instructions">Review or Edit Instructions</string>
    <string name="txt_calculation_method"
            formatted="false"><![CDATA[<b>How it is calculated?</b>
        <br/>Ride estimate is calculated at Rs %d per Km for the
        entire journey. We also add %d%% of the cash transaction (if
        any) as convenience charge.]]> </string>
    <string name="go_to_order_instruction">Give Order Instruction</string>
    <string name="go_to_confirmation">Route and Confirm</string>
    <string name="helptext_buy">Please Enter Items to buy along with
        other instructions necessary to fulfill your order.</string>

    <string name="helptext_pickup">Please Enter Items to be picked up
        along with name and contact number of the person to meet as
        well as any other necessary instructions</string>
    <string name="msg_authentication_failure">Unable to authenticate. Check
        connectivity or try again later</string>
    <string name="title_dialog_confirm_booking">Order in Progress</string>
    <string name="msg_dialog_confirm_booking">Thank you for using Ziprun. You
        order is under process. A ziprun representative will get back to you in
        few minutes</string>

    <string name="msg_status_pending">A Ziprun representative will call
        you in few minutes</string>
    <string name="title_dialog_fetching_directions">Fetching Directions</string>
    <string name="msg_dialog_fetching_direction">Fetching Directions and Calculating Estimate</string>
    <string name="title_dialog_submit_booking">Submit Booking</string>
    <string name="msg_dialog_submit_booking">Submitting Booking</string>
    <string name="error_submit_booking">Unable to submit booking. Try again or contact zipdial</string>
    <string name="msg_error_estimate">Unable to calculate  estimate
        currently</string>
    <string name="msg_mobile_verification">Kindly enter your 10 digits mobile
        number to register</string>
    <string name="helptext_mobile_verification">Note: We will send you a SMS with verification code, kindly use that on next screen.</string>
    <string name="btn_send_verification_code">Send me Verification Code</string>
    <string name="btn_verify_code">Verify Code</string>
    <string name="msg_otp_verification">Enter Verification Code Below</string>
    <string name="helptext_otp_verification">You will receive an SMS
        shortly with verification code. Please enter it below to
        confirm registration</string>
    <string name="title_dialog_wait">Please Wait</string>

    <string name="msg_dialog_send_verification_request">Sending
        verification request</string>
    <string name="msg_dialog_verifying_otp">Verifying OTP</string>
    <string name="not_serviced_error">Currently our services is only available in Delhi NCR region</string>
    <string name="drawer_open">Navigation Drawer Open</string>
    <string name="drawer_close">Navigation Drawer Close</string>
    <string name="error_no_last_booking">No booking created yet</string>
    <string name="btn_register_now">Register Now</string>
    <string name="hint_mobile_number">Enter mobile number</string>
    <string name="hint_verification_code">Enter verification code</string>
    <string name="rate_dialog_message">If you enjoy using Ziprun would you mind
        taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>

    <string-array name="nav_items">
        <item>New Booking</item>
        <item>Track Booking</item>
        <item>Contact Us</item>
        <item>Report Issue</item>
    </string-array>

</resources>
