<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/estimate_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_estimate_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>


    <LinearLayout
        android:id="@+id/estimate_cost_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txt_estimate_distance"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/estimate_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:text="@string/currency"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/source_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_estimate_distance"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_blue_map_marker"/>

    <TextView
        android:id="@+id/txt_transaction_charge"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_hint"
        android:text="@string/txt_transaction_cost"
        android:singleLine="false"
        android:layout_below="@+id/estimate_cost_container"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />


    <ImageView
        android:id="@+id/dest_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_estimate_distance"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_green_map_marker"/>

    <TextView
        android:id="@+id/txt_source_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/source_marker"
        android:textColor="@color/text_color_primary"
        android:gravity="left"/>


    <TextView
        android:id="@+id/source_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="13sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_source_prefix"
        android:textColor="@color/text_color_primary"
        android:gravity="left"/>

    <TextView
        android:id="@+id/txt_dest_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dest_marker"
        android:text="@string/txt_deliver_to"
        android:textColor="@color/text_color_primary"
        android:gravity="left"/>

    <TextView
        android:id="@+id/dest_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="13sp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_dest_prefix"
        android:textColor="@color/text_color_primary"
        android:lineSpacingExtra="1dp"
        android:gravity="right"/>

</RelativeLayout>